--- a/Assignment_1.ipynb
+++ b/Assignment_1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 1,
    "id": "852df76b",
    "metadata": {
     "scrolled": true
@@ -47,11 +47,11 @@
     "    a2 = b\n",
     "    A = [a,b]\n",
     "    i = 0\n",
-    "    while repetition(A) == False:  #range=100 since we know length of bracelet is definitely less than 100\n",
+    "    while repetition(A) == False:  #loops only whilst there are no repetitions\n",
     "        an = (A[i] + A[i+1])%10\n",
     "        A.append(an)\n",
     "        i += 1\n",
-    "    A = A[:-2]\n",
+    "    A = A[:-2]      #A is 1 loop of the bracelet\n",
     "    return A, len(A)\n",
     "        \n",
     "def find_lengths():\n",
